package tickets;

message IdName {
    optional uint32 id = 1;
    optional string name = 2;
};

message Computer {
    optional string id = 1;
    optional string name = 2;
};

message Ticket {
    message Submit {
        message School {
            optional uint32 tests_taken = 1;
            optional uint32 tests_passed = 2;
        }

        message ACM {
            optional string result = 1; // replace with uint32 and map
            optional uint32 test_id = 2;
        }

        optional uint32 submit_number = 1;
        optional uint64 arrived = 2;
        optional bool compiled = 3;
        optional School school = 4;
        optional ACM acm = 5;
    }

    message Problem {
        optional string id = 1;
        optional string name = 2;
    }

    optional IdName contest = 1;
    optional IdName team = 2;
    optional IdName area = 3;
    optional Computer computer = 4;
    optional Problem problem = 5;

    optional uint32 submit_id = 6;
    optional uint64 judge_time = 7;

    repeated Submit submit = 8;
    optional string printer = 9; // string now, replace with id
};